@startuml Search and Filter Tour
skinparam classAttributeIconSize 0

class PublicController {
    +SearchTours(query: SearchToursQuery): Task<IActionResult>
}

class SearchToursQuery {
    +Q: string?
    +Destination: string?
    +Classification: string?
    +Date: DateOnly?
    +MinPrice: decimal?
    +MaxPrice: decimal?
}

class SearchToursQueryHandler {
    -tourRepository: ITourRepository
    +Handle(request: SearchToursQuery): Task<ErrorOr<PaginatedList<SearchTourVm>>>
}

interface ITourRepository {
    +SearchTours(...): Task<List<TourEntity>>
}

class TourEntity {
    +Id: Guid
    +TourName: string
    +Thumbnail: ImageEntity
}

PublicController ..> SearchToursQuery : uses
SearchToursQuery ..> SearchToursQueryHandler : handled by
SearchToursQueryHandler --> ITourRepository : calls
ITourRepository ..> TourEntity : retrieves
@enduml
